doc/infra/kafka/kafka-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: kafka
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: apache/kafka:4.2.0
          ports:
            - containerPort: 9092
            - containerPort: 19092
            - containerPort: 29093
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: kafka
spec:
  selector:
    app: kafka
  ports:
    - name: broker
      protocol: TCP
      port: 9092
      targetPort: 9092
    - name: plaintext-internal
      protocol: TCP
      port: 19092
      targetPort: 19092
    - name: controller
      protocol: TCP
      port: 29093
      targetPort: 29093
