doc/infra/kafka/debezium-connect-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: debezium-connect
  namespace: kafka
  labels:
    app: debezium-connect
spec:
  replicas: 1
  selector:
    matchLabels:
      app: debezium-connect
  template:
    metadata:
      labels:
        app: debezium-connect
    spec:
      containers:
        - name: connect
          image: quay.io/debezium/connect:3.4.0.Final
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: debezium-connect-service
  namespace: kafka
spec:
  selector:
    app: debezium-connect
  ports:
    - name: rest
      protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debezium-connect-ingress
  namespace: kafka
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: cdc.rodriguezrodero.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: debezium-connect-service
                port:
                  number: 8083
